Disable non-functional unit test, add module extensions to unit tests